# os_autumn_labs_2025

lab_1/: CMakeLists.txt
lab_1/app/: child_main.cpp  main.cpp
lab_1/include/: child.h  os.h  parent.h
lab_1/src/: child.cpp  os.cpp  os_win.cpp  parent.cpp
lab_2/: CMakeLists.txt  main.cpp
lab_2/include/: thread.h
lab_2/src/: thread.cpp
lab_3/: CMakeLists.txt
lab_3/app/: child_main.cpp  main.cpp
lab_3/include/: child.h  exception.h  os.h  parent.h
lab_3/src/: child.cpp  os.cpp  parent.cpp
lab_4/: CMakeLists.txt
lab_4/include/: interface.h  os.h
lab_4/src/: lib1.c  lib2.c  os.c  prog1.c  prog2.c
